@@ -2,6 +2,7 @@ v1.8.9
 - TSReader: Fixed: channel switching behavior when switching across tsbuffer files
 - TSReader: Fixed: Windows share access in multiseat mode (return smb:// URI's instead of \\UNC paths to XBMC also for Windows)
 - TSReader: Fixed: SD<->HD channel switching with "fast channel switching" enabled (add PAT detection to find the exact start of the new channel in the timeshift buffer file)
+- Recordings: Add support for retrieving and storing the playback resume position (requires TVServerXBMC build 121 or higher)
 
 v1.8.8
 - sync with PVR API v1.8.0
@@ -29,7 +30,7 @@ v1.6.5
 - Updated language files from Transifex
 
 v1.6.4
--New version number by Team XBMC
+- New version number by Team XBMC
 
 v1.2.3.117
 - Added: timeshift support for XBMC Frodo
